[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-app-source-trail"
version = "1.0.0"
description = "Citation and source tracker — log, verify, and link your research sources. AskJeles companion."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]
